Fixed footer horizontal scrollbar on mobile views

--- a/css/styles.css
+++ b/css/styles.css
@@ -327,6 +327,7 @@ footer ul {
 .footer ul li {
   font-weight: 300;
   margin-bottom: 8px;
+  width: fit-content;
 }
 
 .footer-content .menu-bold {
